@@ -1,5 +1,7 @@
 package org.vinerdream.citPaper.converter;
 
+import com.google.common.collect.BiMap;
+import com.google.common.collect.HashBiMap;
 import com.google.gson.*;
 import com.nexomc.nexo.api.NexoPack;
 import com.nexomc.nexo.pack.creative.NexoPackReader;
@@ -29,9 +31,16 @@ import java.util.zip.CRC32;
 
 import static org.vinerdream.citPaper.utils.CollectionUtils.*;
 import static org.vinerdream.citPaper.utils.ItemUtils.*;
+import static org.vinerdream.citPaper.utils.JsonUtils.GSON;
+import static org.vinerdream.citPaper.utils.ReflectionUtils.readResource;
 
 public class ResourcePackConverter {
     private static final Set<String> DEFAULT_MODEL_DIRECTORIES = Set.of("builtin", "item", "items");
+    private static final Set<Path> CIT_PATHS = Set.of(
+            Path.of("assets", "minecraft", "optifine", "cit"),
+            Path.of("assets", "minecraft", "mcpatcher", "cit"),
+            Path.of("assets", "optifine", "cit")
+    );
 
     private final Mode mode;
     private final Path resourcePackPath;
@@ -87,13 +96,14 @@ public class ResourcePackConverter {
         final File mcmetaFile = rootPath.resolve("pack.mcmeta").toFile();
         if (mcmetaFile.isFile()) {
             try (FileReader reader = new FileReader(mcmetaFile)) {
-                meta = new Gson().fromJson(reader, JsonObject.class);
+                meta = GSON.fromJson(reader, JsonObject.class);
                 if (meta == null) {
                     throw new IllegalStateException("pack.mcmeta is malformed");
                 }
             }
         } else {
             logger.warning("pack.mcmeta is missing");
+            warningCounter++;
             meta = null;
         }
 
@@ -139,13 +149,14 @@ public class ResourcePackConverter {
     }
 
     public void convertCitDirectories(Path rootPath, Path outputPath) throws IOException {
-        Path directory = rootPath.resolve("assets").resolve("minecraft");
-        convertDirectory(directory.resolve("optifine").resolve("cit"), outputPath);
-        convertDirectory(directory.resolve("mcpatcher").resolve("cit"), outputPath);
+        for (Path dir : CIT_PATHS) {
+            convertDirectory(rootPath.resolve(dir), outputPath);
+        }
+
         if (!preserveCitDirectories) {
-            directory = outputPath.resolve("assets").resolve("minecraft");
-            FileUtils.removeDirectory(directory.resolve("optifine").resolve("cit"));
-            FileUtils.removeDirectory(directory.resolve("mcpatcher").resolve("cit"));
+            for (Path dir : CIT_PATHS) {
+                FileUtils.removeDirectory(outputPath.resolve(dir));
+            }
         }
     }
 
@@ -206,27 +217,31 @@ public class ResourcePackConverter {
         final String prefixString = prefixToString(prefix);
 
         if (data.getKey() == null) {
-            data.setKey(new NamespacedKey(namespace, prefixString + path.toLowerCase(Locale.ROOT)));
+            try {
+                data.setKey(new NamespacedKey(namespace, prefixString + path.toLowerCase(Locale.ROOT)));
+            } catch (IllegalArgumentException e) {
+                log(Level.WARNING, e.getMessage());
+                return List.of();
+            }
         } else return List.of(data.saveToMap());
 
-        if (!data.hasAnyData()) {
+        if (data.getMainTextureData().isEmpty()) {
             if (file.getParent().resolve(path + ".json").toFile().isFile()) {
-                data.setMainTextureData(new TextureData(path, null));
+                data.getMainTextureData().setModel(path);
             } else if (file.getParent().resolve(path + ".png").toFile().isFile()) {
-                data.setMainTextureData(new TextureData(null, path));
+                data.getMainTextureData().setTexture(path);
             }
         }
 
-        if (data.getArmorData() != null) {
-            final String armorModel = convertArmorTextureData(file, data.getArmorData(), data.getArmorDataType(), data.getMainTextureData() != null ? data.getMainTextureData().getTexture() : null, outputDirectory, prefix);
-
-            final var ns = mode != Mode.ORAXEN ? namespace : "oraxen";
-            data.getArmorData().setModel(ns + ":" + armorModel);
+        if (!data.getArmorData().isEmpty()) {
+            final String armorModel = convertArmorTextureData(file, data.getArmorData(), data.getMainTextureData().getTexture(), outputDirectory, prefix);
+            if (armorModel != null) {
+                data.setArmorModel(armorModel);
+            }
         }
 
-        final String modelName;
-        if (data.getMainTextureData() != null) {
-            modelName = convertTextureData(file, data.getMainTextureData(), guessParent(data), null, outputDirectory, prefix);
+        if (!data.getMainTextureData().isEmpty()) {
+            convertTextureData(file, data.getMainTextureData(), guessParent(data), null, outputDirectory, prefix);
         } else return List.of(data.saveToMap());
 
         if (mode == Mode.ORAXEN) {
@@ -239,60 +254,55 @@ public class ResourcePackConverter {
                 BowTextureData bowTextureData = data.getBowTextureData();
                 normalizeData(file, bowTextureData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
-                config.set("model", addNamespace(bowTextureData.getModel()));
-                config.set("pulling_models", List.of(
-                        addNamespace(bowTextureData.getPulling_0().getModel()),
-                        addNamespace(bowTextureData.getPulling_1().getModel()),
-                        addNamespace(bowTextureData.getPulling_2().getModel())
+                config.set("model", bowTextureData.getModel());
+                config.set("pulling_models", Arrays.asList(
+                        bowTextureData.getPulling_0().getModel(),
+                        bowTextureData.getPulling_1().getModel(),
+                        bowTextureData.getPulling_2().getModel()
                 ));
 
             } else if (data.getCrossbowTextureData() != null) {
                 CrossbowTextureData crossbowTextureData = data.getCrossbowTextureData();
                 normalizeData(file, crossbowTextureData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
-                config.set("model", addNamespace(crossbowTextureData.getModel()));
-                config.set("pulling_models", List.of(
-                        addNamespace(crossbowTextureData.getPulling_0().getModel()),
-                        addNamespace(crossbowTextureData.getPulling_1().getModel()),
-                        addNamespace(crossbowTextureData.getPulling_2().getModel())
+                config.set("model", crossbowTextureData.getModel());
+                config.set("pulling_models", Arrays.asList(
+                        crossbowTextureData.getPulling_0().getModel(),
+                        crossbowTextureData.getPulling_1().getModel(),
+                        crossbowTextureData.getPulling_2().getModel()
                 ));
-                config.set("charged_model", addNamespace(crossbowTextureData.getWithArrow().getModel()));
-                config.set("firework_model", addNamespace(crossbowTextureData.getWithFirework().getModel()));
+                config.set("charged_model", crossbowTextureData.getWithArrow().getModel());
+                config.set("firework_model", crossbowTextureData.getWithFirework().getModel());
 
             } else if (data.getTridentTextureData() != null) {
                 TridentTextureData tridentData = data.getTridentTextureData();
                 normalizeData(file, tridentData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
                 // not supported by Oraxen
-                config.set("model", addNamespace(tridentData.getModel()));
+                config.set("model", tridentData.getModel());
 
             } else if (data.getFishingRodTextureData() != null) {
                 FishingRodTextureData fishingRodData = data.getFishingRodTextureData();
                 normalizeData(file, fishingRodData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
-                config.set("model", addNamespace(fishingRodData.getModel()));
-                config.set("cast_model", addNamespace(fishingRodData.getCast().getModel()));
+                config.set("model", fishingRodData.getModel());
+                config.set("cast_model", fishingRodData.getCast().getModel());
 
             } else if (data.getElytraTextureData() != null) {
                 ElytraTextureData elytraData = data.getElytraTextureData();
                 normalizeData(file, elytraData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
-                config.set("model", addNamespace(elytraData.getModel()));
+                config.set("model", elytraData.getModel());
 
             } else if (data.getShieldTextureData() != null) {
                 final ShieldTextureData shieldData = data.getShieldTextureData();
                 normalizeData(file, shieldData, data.getMainTextureData().getTexture(), outputDirectory, prefix);
 
-                config.set("model", addNamespace(shieldData.getModel()));
-                config.set("blocking_model", addNamespace(shieldData.getBlocking().getModel()));
+                config.set("model", shieldData.getModel());
+                config.set("blocking_model", shieldData.getBlocking().getModel());
 
             } else {
-                if (modelName != null) {
-                    config.set("model", addNamespace(modelName));
-                } else {
-                    config.set("model", addNamespace(data.getMainTextureData().getModel()));
-                }
-
+                config.set("model", data.getMainTextureData().getModel());
             }
 
             final List<Map<String, String>> renames = new ArrayList<>();
@@ -332,13 +342,9 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/bow.json"),
-                    namespace,
                     bowTextureData.getModel(),
-                    namespace,
                     bowTextureData.getPulling_1().getModel(),
-                    namespace,
                     bowTextureData.getPulling_2().getModel(),
-                    namespace,
                     bowTextureData.getPulling_0().getModel()
             );
         } else if (data.getCrossbowTextureData() != null) {
@@ -347,17 +353,11 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/crossbow.json"),
-                    namespace,
                     crossbowTextureData.getWithArrow().getModel(),
-                    namespace,
                     crossbowTextureData.getWithFirework().getModel(),
-                    namespace,
                     crossbowTextureData.getModel(),
-                    namespace,
                     crossbowTextureData.getPulling_1().getModel(),
-                    namespace,
                     crossbowTextureData.getPulling_2().getModel(),
-                    namespace,
                     crossbowTextureData.getPulling_0().getModel()
             );
         } else if (data.getTridentTextureData() != null) {
@@ -366,11 +366,8 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/trident.json"),
-                    namespace,
                     tridentData.getModel(),
-                    namespace,
                     tridentData.getInHand().getModel(),
-                    namespace,
                     tridentData.getThrowing().getModel()
             );
         } else if (data.getFishingRodTextureData() != null) {
@@ -379,9 +376,7 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/fishing_rod.json"),
-                    namespace,
                     fishingRodData.getModel(),
-                    namespace,
                     fishingRodData.getCast().getModel()
             );
         } else if (data.getElytraTextureData() != null) {
@@ -390,9 +385,7 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/elytra.json"),
-                    namespace,
                     elytraData.getModel(),
-                    namespace,
                     elytraData.getBroken().getModel()
             );
         } else if (data.getShieldTextureData() != null) {
@@ -401,20 +394,14 @@ public class ResourcePackConverter {
 
             jsonData = String.format(
                     readResource("/models/shield.json"),
-                    namespace,
                     shieldData.getModel(),
-                    namespace,
                     shieldData.getBlocking().getModel()
             );
 
         } else {
-            if (modelName != null) {
-                jsonData = String.format(readResource("/models/default.json"), namespace + ":item/" + modelName);
-            } else {
-                jsonData = String.format(readResource("/models/default.json"), data.getMainTextureData().getModel());
-            }
+            jsonData = String.format(readResource("/models/default.json"), data.getMainTextureData().getModel());
         }
-        jsonPath.getParent().toFile().mkdirs();
+        Files.createDirectories(jsonPath.getParent());
         try (FileWriter writer = new FileWriter(jsonPath.toFile())) {
             writer.write(jsonData);
         }
@@ -451,7 +438,7 @@ public class ResourcePackConverter {
             if (first == null) {
                 first = data1;
             }
-            data1.setModel(convertTextureData(file, data1, parent, fallbackTexture, outputDirectory, prefix));
+            convertTextureData(file, data1, parent, fallbackTexture, outputDirectory, prefix);
         }
         assert first != null;
         if (data.getModel() == null) {
@@ -501,7 +488,7 @@ public class ResourcePackConverter {
         }
     }
 
-    private String convertTextureData(Path file, TextureData data, String parent, String fallbackTexture, Path outputDirectory, Path prefix) throws IOException {
+    private void convertTextureData(Path file, TextureData data, String parent, String fallbackTexture, Path outputDirectory, Path prefix) throws IOException {
         final String model = removeExtension(data.getModel());
         final String texture;
         if (data.getTexture() != null) {
@@ -511,57 +498,123 @@ public class ResourcePackConverter {
         }
         final String overlay = removeExtension(data.getOverlay());
 
-        final String prefixString = prefixToString(prefix);
-
         if (model == null) {
             if (texture == null) {
-                return null;
+                return;
             }
-            final Path texturePath = copyTexture(List.of(file.getParent()), texture, outputDirectory, prefix);
-            if (texturePath == null) return null;
-            final String textureName = resourceNameFromPath(texturePath);
-            String overlayName = null;
-            if (overlay != null) {
-                final Path overlayPath = copyTexture(List.of(file.getParent()), overlay, outputDirectory, prefix);
-                if (overlayPath != null) {
-                    overlayName = resourceNameFromPath(overlayPath);
+            final String textureKey = copyTexture(List.of(file.getParent()), texture, outputDirectory, prefix);
+            if (textureKey == null) return;
+            final String overlayKey = overlay != null ? copyTexture(List.of(file.getParent()), overlay, outputDirectory, prefix) : null;
+
+            data.setModel(textureToModel(textureKey, overlayKey, parent, outputDirectory, prefix));
+            return;
+        }
+
+        data.setModel(copyModel(file.getParent(), model, texture, outputDirectory, prefix));
+    }
+
+    private @Nullable String convertArmorTextureData(Path file, Map<Integer, TextureData> armorData, String fallbackTexture, Path outputDirectory, Path prefix) throws IOException {
+        if (mode == Mode.ORAXEN) {
+            String armorName = null;
+            for (var entry : armorData.entrySet()) {
+                final int type = entry.getKey();
+                final TextureData data = entry.getValue();
+
+                final String texture = data.getTexture() != null ? data.getTexture() : fallbackTexture;
+                if (texture != null) {
+                    armorName = copyArmorOraxen(file, texture, armorName, String.valueOf(type), outputDirectory, prefix);
+                }
+                if (data.getOverlay() != null) {
+                    armorName = copyArmorOraxen(file, data.getOverlay(), armorName, type + "_overlay", outputDirectory, prefix);
+                }
+            }
+            return "oraxen:" + armorName;
+        }
+
+        for (var entry : armorData.entrySet()) {
+            final int type = entry.getKey();
+            final TextureData data = entry.getValue();
+
+            final String texture = data.getTexture() != null ? data.getTexture() : fallbackTexture;
+            if (texture != null) {
+                final String armorTextureKey = copyArmorTexture(
+                        file.getParent(),
+                        texture,
+                        type,
+                        outputDirectory,
+                        prefix
+                );
+                if (armorTextureKey != null) {
+                    data.setTexture(armorTextureKey);
                 }
             }
 
-            return textureToModel(textureName, overlayName, parent, outputDirectory, prefix);
+            if (data.getOverlay() != null) {
+                final String armorOverlayKey = copyArmorTexture(
+                        file.getParent(),
+                        data.getOverlay(),
+                        type,
+                        outputDirectory,
+                        prefix
+                );
+                if (armorOverlayKey != null) {
+                    data.setOverlay(armorOverlayKey);
+                }
+            }
         }
-        final Path modelPath = copyModel(file.getParent(), model, texture, outputDirectory, prefix);
-        if (modelPath == null) return null;
 
-        return prefixString + resourceNameFromPath(modelPath);
-    }
-
-    private String convertArmorTextureData(Path file, TextureData data, int type, String fallbackTexture, Path outputDirectory, Path prefix) throws IOException {
-        final String model = removeExtension(data.getModel());
-        final String texture;
-        if (data.getTexture() != null) {
-            texture = removeExtension(data.getTexture());
-        } else {
-            texture = fallbackTexture;
-        }
-        final String overlay = removeExtension(data.getOverlay());
-
-        if (model == null) {
-            if (texture == null) {
+        final @NotNull TextureData mainData;
+        {
+            TextureData mdata = null;
+            for (int i = 1; i <= 3; i++) {
+                final TextureData data = armorData.get(i);
+                if (data == null) continue;
+                if (data.getTexture() != null) {
+                    mdata = data;
+                    break;
+                }
+            }
+            if (mdata == null) {
+                log(Level.WARNING, "No texture set for armor");
                 return null;
             }
-            return armorTextureToModel(file, texture, type, overlay, outputDirectory, prefix);
+            mainData = mdata;
         }
-        final Path modelPath = copyResource(
-                List.of(file.getParent()),
-                texture.replaceFirst(":", "/models/"),
-                "json",
-                outputDirectory.resolve(Path.of("assets", namespace, "equipment")),
-                prefix
-        );
-        if (modelPath == null) return null;
 
-        return prefixToString(prefix) + resourceNameFromPath(modelPath);
+        final JsonObject json = buildArmorJson(armorData);
+
+        final Path modelPath = outputDirectory.resolve(
+                Path.of("assets", namespace, "equipment")
+        ).resolve(prefix).resolve(lastKeyPart(mainData.getTexture()) + ".json");
+        Files.createDirectories(modelPath.getParent());
+        try (FileWriter writer = new FileWriter(modelPath.toFile())) {
+            writer.write(GSON.toJson(json));
+        }
+        return namespace + ":" + prefixToString(prefix) + resourceNameFromPath(modelPath);
+    }
+
+    private @NotNull JsonObject buildArmorJson(Map<Integer, TextureData> armorData) {
+        final JsonObject json = new JsonObject();
+        final JsonObject layers = new JsonObject();
+        for (var entry : armorData.entrySet()) {
+            final String type = armorNameFromTypeCode(entry.getKey());
+            final TextureData data = entry.getValue();
+
+            final JsonArray textures = new JsonArray();
+            final String[] textureKeys = new String[]{
+                    data.getTexture(),
+                    data.getOverlay(),
+            };
+            for (var textureKey : textureKeys) {
+                if (textureKey == null) continue;
+                final JsonObject obj = new JsonObject();
+                obj.addProperty("texture", textureKey);
+                textures.add(obj);
+            }
+            layers.add(type, textures);
+        }
+        json.add("layers", layers);
+        return json;
     }
 
     private String resourceNameFromPath(Path path) {
@@ -581,131 +634,72 @@ public class ResourcePackConverter {
         return filename + "." + extension;
     }
 
-    private String textureToModel(String textureName, String overlayName, String parent, Path outputDirectory, Path prefix) throws IOException {
-        final Path tmpModelPath = getTmpDir().resolve("models").resolve(textureName + ".json");
-        final String prefixString = prefixToString(prefix);
-        tmpModelPath.getParent().toFile().mkdirs();
+    private @NotNull String textureToModel(String textureKey, String overlayKey, String parent, Path outputDirectory, Path prefix) throws IOException {
+        final String filename = lastKeyPart(textureKey);
+        final Path tmpModelPath = getTmpDir().resolve("models").resolve(filename + ".json");
+        Files.createDirectories(tmpModelPath.getParent());
         try (FileWriter writer = new FileWriter(tmpModelPath.toFile())) {
-            if (overlayName == null) {
-                writer.write(String.format(readResource("/models/item.json"), parent, namespace, prefixString + textureName));
+            if (overlayKey == null) {
+                writer.write(String.format(readResource("/models/item.json"), parent, textureKey));
             } else {
-                writer.write(String.format(readResource("/models/item_with_overlay.json"), parent, namespace, prefixString + textureName, namespace, prefixString + overlayName));
+                writer.write(String.format(readResource("/models/item_with_overlay.json"), parent, textureKey, overlayKey));
             }
         }
 
-        return prefixString + removeExtension(Objects.requireNonNull(
-                copyModel(tmpModelPath.getParent(), textureName, false, null, outputDirectory, prefix),
+        return Objects.requireNonNull(
+                copyModel(tmpModelPath.getParent(), filename, false, null, outputDirectory, prefix),
                 "Failed to copy generated model!"
-        ).getFileName().toString());
+        );
     }
 
-    private String armorTextureToModel(Path file, String texture, int type, String overlay, Path outputDirectory, Path prefix) throws IOException {
-        final Path armorTexturePath;
-
-        if (mode == Mode.ORAXEN) {
-            armorTexturePath = copyResource(
-                    List.of(file.getParent()),
-                    texture.replaceFirst(":", "/textures/"),
-                    "png",
-                    outputDirectory.resolve(Path.of(
-                            "assets",
-                            namespace,
-                            "textures",
-                            "armor"
-                    )),
-                    Path.of("")
-            );
-            if (armorTexturePath == null) return null;
-            final String armorName = removeExtension(namespace + "_" + prefixToString(prefix).replace("/", "_") + armorTexturePath.getFileName());
-            Files.move(
-                    armorTexturePath,
-                    armorTexturePath.resolveSibling(
-                            String.format("%s_armor_layer_%s.png", armorName, type)
-                    ),
-                    StandardCopyOption.REPLACE_EXISTING
-            );
-            return armorName;
-        }
-
-        armorTexturePath = copyArmorTexture(
-                file.getParent(),
-                texture,
-                type,
-                outputDirectory,
-                prefix
+    private @Nullable String copyArmorOraxen(Path file, String texture, @Nullable String armorName, String type, Path outputDirectory, Path prefix) throws IOException {
+        final var location = findResource(
+                List.of(file.getParent()),
+                removeExtension(texture.replaceFirst(":", "/textures/")),
+                "png"
         );
-        if (armorTexturePath == null) return null;
-        final String armorTextureName = removeExtension(
-                armorTexturePath.getFileName().toString()
-        );
-        final String armorOverlayName;
-        if (overlay != null) {
-            final Path armorOverlayPath = copyArmorTexture(
-                    file.getParent(),
-                    overlay,
-                    type,
-                    outputDirectory,
-                    prefix
-            );
-            if (armorOverlayPath != null) {
-                armorOverlayName = removeExtension(
-                        armorOverlayPath.getFileName().toString()
-                );
-            } else {
-                armorOverlayName = null;
-            }
-        } else {
-            armorOverlayName = null;
-        }
-        final String prefixString = prefixToString(prefix);
-        final Path modelPath = outputDirectory.resolve(
-                Path.of("assets", namespace, "equipment")
-        ).resolve(prefix).resolve(armorTextureName + ".json");
-        modelPath.getParent().toFile().mkdirs();
-        try (FileWriter writer = new FileWriter(modelPath.toFile())) {
-            if (type != 3) {
-                if (armorOverlayName != null) {
-                    writer.write(String.format(
-                            readResource("/models/armor_with_overlay.json"),
-                            namespace,
-                            prefixString + armorTextureName,
-                            namespace,
-                            prefixString + armorOverlayName,
-                            namespace,
-                            prefixString + armorTextureName,
-                            namespace,
-                            prefixString + armorOverlayName,
-                            namespace,
-                            prefixString + armorTextureName,
-                            namespace,
-                            prefixString + armorOverlayName
-                    ));
-                } else {
-                    writer.write(String.format(
-                            readResource("/models/armor.json"),
-                            namespace,
-                            prefixString + armorTextureName,
-                            namespace,
-                            prefixString + armorTextureName,
-                            namespace,
-                            prefixString + armorTextureName
-                    ));
-                }
-            } else {
-                writer.write(String.format(
-                        readResource("/models/armor_elytra.json"),
+        if (location == null) return null;
+        final Path armorTexturePath = copyResource(
+                location,
+                "png",
+                outputDirectory.resolve(Path.of(
+                        "assets",
                         namespace,
-                        prefixString + armorTextureName
-                ));
-            }
+                        "textures",
+                        "armor"
+                )),
+                Path.of("")
+        );
+        if (armorName == null) {
+            armorName = removeExtension(namespace + "_" + prefixToString(prefix).replace("/", "_") + armorTexturePath.getFileName());
         }
-        return prefixString + resourceNameFromPath(modelPath);
+        Files.move(
+                armorTexturePath,
+                armorTexturePath.resolveSibling(
+                        String.format("%s_armor_layer_%s.png", armorName, type)
+                ),
+                StandardCopyOption.REPLACE_EXISTING
+        );
+        return armorName;
     }
 
-    private Path copyTexture(List<Path> inputDirectories, String texture, Path outputDirectory, Path prefix) throws IOException {
-        return copyResource(
+    private final BiMap<Path, String> copiedTextures = HashBiMap.create();
+
+    private @Nullable String copyTexture(List<Path> inputDirectories, String texture, Path outputDirectory, Path prefix) throws IOException {
+        if (copiedTextures.containsValue(texture)) {
+            return texture;
+        }
+        final var location = findResource(
                 inputDirectories,
                 texture.replaceFirst(":", "/textures/"),
+                "png"
+        );
+        if (location == null) return null;
+        if (copiedTextures.containsKey(location.getValue())) {
+            return copiedTextures.get(location.getValue());
+        }
+        final String key = addNamespace(prefixToString(prefix) + resourceNameFromPath(copyResource(
+                location,
                 "png",
                 outputDirectory.resolve(Path.of(
                         "assets",
@@ -714,19 +708,40 @@ public class ResourcePackConverter {
                         "item"
                 )),
                 prefix
-        );
+        )));
+        copiedTextures.put(location.getValue(), key);
+        return key;
     }
 
-    private Path copyArmorTexture(Path inputDirectory, String texture, int textureType, Path outputDirectory, Path prefix) throws IOException {
-        final String subfolder = switch (textureType) {
+    private @NotNull String armorNameFromTypeCode(final int type) {
+        return switch (type) {
             case 1 -> "humanoid";
             case 2 -> "humanoid_leggings";
             case 3 -> "wings";
-            default -> throw new IllegalStateException("Unexpected value: " + textureType);
+            default -> throw new IllegalStateException("Unexpected value: " + type);
         };
-        return copyResource(
+    }
+
+    private final Map<Map.Entry<Path, Integer>, String> copiedArmorTextures = new HashMap<>();
+
+    private @Nullable String copyArmorTexture(Path inputDirectory, String texture, int textureType, Path outputDirectory, Path prefix) throws IOException {
+        if (copiedArmorTextures.containsValue(texture)) {
+            return texture;
+        }
+
+        final String subfolder = armorNameFromTypeCode(textureType);
+        final var location = findResource(
                 List.of(inputDirectory),
-                texture.replaceFirst(":", "/textures/"),
+                removeExtension(texture.replaceFirst(":", "/textures/")),
+                "png"
+        );
+        if (location == null) return null;
+        final Map.Entry<Path, Integer> cacheKey = Map.entry(location.getValue(), textureType);
+        if (copiedArmorTextures.containsKey(cacheKey)) {
+            return copiedArmorTextures.get(cacheKey);
+        }
+        final String key = namespace + ":" + prefixToString(prefix) + resourceNameFromPath(copyResource(
+                location,
                 "png",
                 outputDirectory.resolve(Path.of(
                     "assets",
@@ -737,18 +752,26 @@ public class ResourcePackConverter {
                         subfolder
                 )),
                 prefix
-        );
+        ));
+        copiedArmorTextures.put(cacheKey, key);
+        return key;
     }
 
-    private Path copyModel(Path inputDirectory, String model, String textureName, Path outputDirectory, Path prefix) throws IOException {
+    private final Map<Path, String> copiedModels = new HashMap<>();
+    private final Set<String> copiedModelKeys = new HashSet<>();
+
+    private @Nullable String copyModel(Path inputDirectory, String model, String textureName, Path outputDirectory, Path prefix) throws IOException {
         return copyModel(inputDirectory, model, true, textureName, outputDirectory, prefix);
     }
 
-    private Path copyModel(Path inputDirectory, String model, boolean processTextures, String textureName, Path outputDirectory, Path prefix) throws IOException {
+    private @Nullable String copyModel(Path inputDirectory, String model, boolean processTextures, String textureName, Path outputDirectory, Path prefix) throws IOException {
         return copyModel(inputDirectory, model, processTextures, textureName, outputDirectory, prefix, new ArrayList<>());
     }
 
-    private Path copyModel(Path inputDirectory, String model, boolean processTextures, String textureName, Path outputDirectory, Path prefix, List<Path> seenParents) throws IOException {
+    private @Nullable String copyModel(Path inputDirectory, String model, boolean processTextures, String textureName, Path outputDirectory, Path prefix, List<Path> seenParents) throws IOException {
+        if (copiedModelKeys.contains(model)) {
+            return model;
+        }
         final Path modelDirectory = outputDirectory.resolve(Path.of(
                 "assets",
                 namespace,
@@ -759,25 +782,47 @@ public class ResourcePackConverter {
 
         final Path texturePath = textureName != null ? resolveResource(inputDirectory, ensureExtension(textureName, "png"), ResourceType.TEXTURE) : null;
         model = model.replaceFirst(":", "/models/");
-        Path newPath = copyResource(
+        final var location = findResource(
                 List.of(inputDirectory),
                 model,
-                "json",
-                modelDirectory,
-                prefix
+                "json"
         );
-        if (newPath == null || !processTextures) return newPath;
+        if (location == null) return null;
 
-        seenParents.add(prefix.resolve(resourceNameFromPath(newPath)));
+        final @NotNull String parentModelKey;
+        if (copiedModels.containsKey(location.getValue())) {
+            if (texturePath == null) {
+                return copiedModels.get(location.getValue());
+            } else {
+                parentModelKey = copiedModels.get(location.getValue());
+            }
+        } else {
+            final Path newPath = copyResource(
+                    location,
+                    "json",
+                    modelDirectory,
+                    prefix
+            );
+            if (!processTextures) {
+                final var key = addNamespace(prefixString + resourceNameFromPath(newPath));
+                // skip path caching
+                copiedModelKeys.add(key);
+                return key;
+            }
 
-        JsonObject json;
-        try (FileReader reader = new FileReader(newPath.toFile())) {
-            try {
-                json = new Gson().fromJson(reader, JsonObject.class);
-            } catch (JsonSyntaxException ignored) {
-                final Path originalPath = resolveOldPath(inputDirectory, model, "json");
-                log(Level.WARNING, "Invalid JSON: " + originalPath);
-                return newPath;
+            seenParents.add(prefix.resolve(resourceNameFromPath(newPath)));
+
+            final JsonObject json;
+            try (FileReader reader = new FileReader(newPath.toFile())) {
+                try {
+                    json = GSON.fromJson(reader, JsonObject.class);
+                } catch (JsonSyntaxException ignored) {
+                    log(Level.WARNING, "Invalid JSON: " + location.getValue());
+                    final var key = addNamespace(prefixString + resourceNameFromPath(newPath));
+                    copiedModels.put(location.getValue(), key);
+                    copiedModelKeys.add(key);
+                    return key;
+                }
             }
             final JsonElement parent = json.get("parent");
             if (parent != null) {
@@ -792,64 +837,84 @@ public class ResourcePackConverter {
                         parentInputDirectory = parentInputDirectory.resolve(parentPath.getParent());
                         parentPrefix = parentPrefix.resolve(parentPath.getParent());
                     }
-                    final Path parentModel = copyModel(parentInputDirectory, parentPath.getFileName().toString(), true, null, outputDirectory, parentPrefix, seenParents);
+                    final String parentModel = copyModel(parentInputDirectory, parentPath.getFileName().toString(), true, null, outputDirectory, parentPrefix, seenParents);
                     if (parentModel != null) {
-                        json.addProperty("parent", namespace + ":item/" + prefixToString(parentPrefix) + resourceNameFromPath(parentModel));
+                        json.addProperty("parent", parentModel);
                     }
                 } else {
                     log(Level.WARNING, "Recursive model detected (the model is parent of itself)");
                     json.remove("parent");
                 }
             }
-        }
-        if (texturePath != null) {
-            fixTextures(inputDirectory, model, json, null, outputDirectory, prefix);
+            fixTextures(List.of(inputDirectory, location.getValue().getParent()), json, null, outputDirectory, prefix);
             try (FileWriter writer = new FileWriter(newPath.toFile())) {
-                writer.write(new Gson().toJson(json));
+                writer.write(GSON.toJson(json));
             }
-            final JsonObject newJson = new JsonObject();
-            newJson.addProperty("parent", namespace + ":item/" + prefixString + resourceNameFromPath(newPath));
-            if (json.get("textures") != null) {
-                newJson.add("textures", json.get("textures"));
-            } else {
-                final JsonObject textures = new JsonObject();
-                textures.addProperty("layer0", textureName);
-                newJson.add("textures", textures);
-            }
-            json = newJson;
-            newPath = newPath.getParent().resolve(
-                    removeExtension(newPath.getFileName().toString())
-                            + "_" + removeExtension(texturePath.getFileName().toString()) + ".json"
+
+            parentModelKey = addNamespace(prefixString + resourceNameFromPath(newPath));
+
+            copiedModels.put(location.getValue(), parentModelKey);
+            copiedModelKeys.add(parentModelKey);
+        }
+
+        if (texturePath == null) {
+            return Objects.requireNonNull(
+                    copiedModels.get(location.getValue()),
+                    location.getValue() + " was not yet processed"
             );
         }
-        fixTextures(inputDirectory, model, json, textureName, outputDirectory, prefix);
-        try (FileWriter writer = new FileWriter(newPath.toFile())) {
-            writer.write(new Gson().toJson(json));
+
+        final Path parentPath = Objects.requireNonNull(
+                findResource(List.of(outputDirectory.resolve("assets")), parentModelKey.replaceFirst(":", "/models/"), "json"),
+                "Model " + parentModelKey + " must've been cached but not found"
+        ).getValue();
+        final JsonObject parentJson;
+        try (FileReader reader = new FileReader(parentPath.toFile())) {
+            try {
+                parentJson = GSON.fromJson(reader, JsonObject.class);
+            } catch (JsonSyntaxException ignored) {
+                log(Level.WARNING, "Invalid JSON: " + parentPath);
+                return copiedModels.get(location.getValue());
+            }
         }
-        return newPath;
+
+        final JsonObject newJson = new JsonObject();
+        newJson.addProperty("parent", parentModelKey);
+        if (parentJson.get("textures") != null) {
+            newJson.add("textures", parentJson.get("textures"));
+        } else {
+            final JsonObject textures = new JsonObject();
+            textures.addProperty("layer0", textureName);
+            newJson.add("textures", textures);
+        }
+        final Path newPath = parentPath.resolveSibling(
+                resourceNameFromPath(parentPath)
+                        + "_" + resourceNameFromPath(texturePath) + ".json"
+        );
+        fixTextures(List.of(inputDirectory, location.getValue().getParent()), newJson, textureName, outputDirectory, prefix);
+        try (FileWriter writer = new FileWriter(newPath.toFile())) {
+            writer.write(GSON.toJson(newJson));
+        }
+
+        final var key = namespace + ":" + parentModelKey.split(":", 2)[1].replaceFirst("[^/$]*$", "") + resourceNameFromPath(newPath);
+        copiedModelKeys.add(key);
+        return key;
     }
 
-    private void fixTextures(Path inputDirectory, String modelName, JsonObject model, String textureOverride, Path outputDirectory, Path prefix) throws IOException {
+    private void fixTextures(List<Path> inputDirectories, JsonObject model, String textureOverride, Path outputDirectory, Path prefix) throws IOException {
         JsonElement texturesElement = model.get("textures");
         if (texturesElement != null) {
             JsonObject textures = texturesElement.getAsJsonObject();
             for (Map.Entry<String, JsonElement> entry : textures.entrySet()) {
                 final String textureName = textureOverride == null ? entry.getValue().getAsString() : textureOverride;
-                final Path outputTexture = copyTexture(List.of(inputDirectory, resolveOldPath(inputDirectory, modelName, "json").getParent()), textureName, outputDirectory, prefix);
-                if (outputTexture != null) {
-                    textures.addProperty(
-                            entry.getKey(),
-                            namespace
-                                    + ":item/" + prefixToString(prefix) + removeExtension(outputTexture.getFileName().toString())
-                    );
-                } else {
-                    textures.addProperty(entry.getKey(), textureName);
-                }
+                final String outputTexture = copyTexture(inputDirectories, textureName, outputDirectory, prefix);
+
+                textures.addProperty(entry.getKey(), outputTexture != null ? outputTexture : textureName);
             }
         }
     }
 
-    private Path copyResource(List<Path> inputDirectories, String resource, String extension, Path outputDirectory, Path prefix) throws IOException {
+    private Map.Entry<Path, Path> findResource(List<Path> inputDirectories, String resource, String extension) throws IOException {
         Path foundDirectory = null;
         Path oldPath = null;
         for (Path inputDirectory : inputDirectories) {
@@ -863,16 +928,21 @@ public class ResourcePackConverter {
             final Path resourcePath = stringToPath(resource);
             if (!DEFAULT_MODEL_DIRECTORIES.contains(resourcePath.getName(0).toString())
                     && (resourcePath.getNameCount() != 1 || inputDirectories.size() != 1
-                        || !DEFAULT_MODEL_DIRECTORIES.contains(inputDirectories.getFirst().getFileName()
-                                .toString().replaceFirst("^minecraft:", "")))
+                    || !DEFAULT_MODEL_DIRECTORIES.contains(inputDirectories.getFirst().getFileName()
+                    .toString().replaceFirst("^minecraft:", "")))
             ) {
                 log(Level.WARNING, "Missing resource: " + resource + " (searched in: " + inputDirectories + ")");
             }
             return null;
         }
-        String outputName = removeExtension(joinPath(foundDirectory.relativize(oldPath)));
+        return Map.entry(foundDirectory, oldPath);
+    }
+
+    private Path copyResource(@NotNull Map.Entry<Path, Path> location, String extension, Path outputDirectory, Path prefix) throws IOException {
+        final var oldPath = location.getValue();
+        String outputName = removeExtension(joinPath(location.getKey().relativize(oldPath)));
         Path newPath = outputDirectory.resolve(prefix).resolve(ensureExtension(outputName.toLowerCase(Locale.ROOT), extension));
-        newPath.getParent().toFile().mkdirs();
+        Files.createDirectories(newPath.getParent());
         Files.copy(oldPath, newPath, StandardCopyOption.REPLACE_EXISTING);
         if (addMcmeta(oldPath).toFile().isFile()) {
             Files.copy(addMcmeta(oldPath), addMcmeta(newPath), StandardCopyOption.REPLACE_EXISTING);
@@ -899,6 +969,11 @@ public class ResourcePackConverter {
             return string;
         }
         return string + "/";
+    }
+
+    private @NotNull String lastKeyPart(@NotNull String key) {
+        final String[] parts = key.split(":", 2)[1].split("/");
+        return parts[parts.length - 1];
     }
 
     private @NotNull String addNamespace(@NotNull String path) {
@@ -958,23 +1033,7 @@ public class ResourcePackConverter {
         return getTmpDir().resolve(UUID.randomUUID().toString());
     }
 
-    private String readResource(String path) throws IOException {
-        try (InputStream input = getClass().getResourceAsStream(path)) {
-            assert input != null;
-            try (InputStreamReader inputStreamReader = new InputStreamReader(input)) {
-                try (BufferedReader reader = new BufferedReader(inputStreamReader)) {
-                    StringBuilder builder = new StringBuilder();
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        builder.append(line.strip());
-                    }
-                    return builder.toString();
-                }
-            }
-        }
-    }
-
-    private void log(Level level, String message) {
+    private void log(@NotNull Level level, @NotNull String message) {
         logMessages.add(Map.entry(level, message));
     }
 }
